@@ -189,6 +189,7 @@ etym            -- Look up word origins at www.etymonline.com
 excite          -- Search on Excite (www.excite.com)
 fast            -- Search the web using FAST Search (www.alltheweb.com)
 filesearching   -- Search files on filesearching (www.filesearching.com)
+finkpkg         -- Search Fink packages (pdb.finkproject.org)
 foldoc          -- The Free On-Line Dictionary Of Computing (foldoc.org)
 freebsd         -- Search FreeBSD related information (www.freebsd.org)
 freedb          -- Search for cd track listings in FreeDB (www.freedb.org)
