@@ -37,6 +37,7 @@ elvi.1sr.gz @mandir@/man1/etym.1sr.gz
 elvi.1sr.gz @mandir@/man1/excite.1sr.gz
 elvi.1sr.gz @mandir@/man1/fast.1sr.gz
 elvi.1sr.gz @mandir@/man1/filesearching.1sr.gz
+elvi.1sr.gz @mandir@/man1/finkpkg.1sr.gz
 elvi.1sr.gz @mandir@/man1/foldoc.1sr.gz
 elvi.1sr.gz @mandir@/man1/freebsd.1sr.gz
 elvi.1sr.gz @mandir@/man1/freedb.1sr.gz
