@@ -1,0 +1,4 @@
+finkpkg surfraw
+Revolutionary Front Rage Against the Web
+finkpkg -pkg=surfraw
+Revolutionary Front Rage Against the Web
